--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         
         <meta property="og:title" content="Lojko Hunter">
         <meta property="og:site_name" content="Lojko Hunter">
-        <meta property="og:url" content="http://www.jumbledjargon.website/lojkohunter/">
+        <meta property="og:url" content="https://project.joshhills.dev/lojkohunter/">
         <meta property="og:description" content="Lojko is loose around the office again...">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="http://www.jumbledjargon.website/lojkohunter/img/share-img.jpg" />
+        <meta property="og:image" content="https://project.joshhills.dev/lojkohunter/img/share-img.jpg" />
         <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
         <script src="js/lojkohunter.js"></script>
         <style>
